Fixed overflow issue caused by animation

--- a/src/components/templates/ComingSoon2Template/ComingSoon2Template.module.css
+++ b/src/components/templates/ComingSoon2Template/ComingSoon2Template.module.css
@@ -1,3 +1,7 @@
+.comingSoonContainer
+{
+    overflow-x: hidden;
+}
 .heroSection
 {
     display: flex;
